Bug 61930 - Weston pixman backend crashing
Summary: Weston pixman backend crashing
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.0.90
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 01:58 UTC by nerdopolis1
Modified: 2013-03-19 02:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
gdb output (10.15 KB, text/plain)
2013-03-07 01:58 UTC, nerdopolis1
Details

Description nerdopolis1 2013-03-07 01:58:45 UTC
Created attachment 76067 [details]
gdb output

It seems that when I open weston with --use-pixman it's crashing.

Weirdly enough when I tried valgrind it doesn't crash.
Comment 1 Kristian Høgsberg 2013-03-19 02:26:36 UTC
commit f3e39f987275ed1636920d70590bd7e97437d1de
Author: Philipp Brüschweiler <blei42@gmail.com>
Date:   Fri Mar 8 20:35:39 2013 +0100

    pixman-renderer: don't forget to initialize the debug fields
    
    Fixes https://bugs.freedesktop.org/show_bug.cgi?id=61930


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.