pixman-renderer: don't forget to initialize the debug fields

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=61930